Demonstration/POC of a custom theme overriding the base theme.

--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "plugins": [
       {
         "name": "typescript-tslint-plugin"
@@ -16,7 +17,11 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "paths": {
+      "theme": ["js/theme/dc_custom_theme", "js/theme/base_theme"],
+      "theme/*": ["js/theme/dc_custom_theme/*", "js/theme/base_theme/*"]
+    }
   },
   "exclude": [
     "node_modules",
