--- a/static/package.json
+++ b/static/package.json
@@ -122,7 +122,8 @@
     "prettier": "^2.7.1",
     "pretty": "^2.0.0",
     "react-test-renderer": "^17.0.2",
-    "ts-jest": "^28.0.5"
+    "ts-jest": "^28.0.5",
+    "tsconfig-paths": "^4.2.0"
   },
   "wireit": {
     "build-web-components-watch": {
